--- a/me/index.html
+++ b/me/index.html
@@ -2,68 +2,219 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>shag • links</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😁</text></svg>">
     <style>
         :root {
-            --main-bg: #f8f9fa;
-            --glass-bg: rgba(255, 255, 255, 0.7);
-            --glass-border: rgba(255, 255, 255, 0.4);
-            --text-primary: #000000;
-            --text-secondary: #666666;
-            --icon-border: #e0e0e0;
-            --hover-bg: rgba(0, 0, 0, 0.05);
+            --glass: rgba(255, 255, 255, 0.45);
+            --text-main: #1d1d1f;
+            --text-sub: #424245;
+            --border: rgba(255, 255, 255, 0.3);
         }
+
         @media (prefers-color-scheme: dark) {
             :root {
-                --main-bg: #000000;
-                --glass-bg: rgba(28, 28, 30, 0.7);
-                --glass-border: rgba(255, 255, 255, 0.1);
-                --text-primary: #ffffff;
-                --text-secondary: #a1a1a1;
-                --icon-border: #38383a;
-                --hover-bg: rgba(255, 255, 255, 0.1);
+                --glass: rgba(10, 10, 10, 0.45);
+                --text-main: #ffffff;
+                --text-sub: #a1a1a6;
+                --border: rgba(255, 255, 255, 0.1);
             }
         }
+
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+
         body {
-            margin: 0; padding: 20px; background-color: var(--main-bg);
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            display: flex; justify-content: center; align-items: center; min-height: 100vh;
-            transition: background-color 0.3s ease;
+            margin: 0;
+            padding: 0;
+            height: 100dvh;
+            width: 100vw;
+            display: flex;
+            flex-direction: column;
+            font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Helvetica Neue", sans-serif;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            color: var(--text-main);
+            overflow: hidden;
+            transition: background-image 1.2s cubic-bezier(0.4, 0, 0.2, 1);
         }
-        .container {
-            text-align: center; padding: 3rem 2rem; max-width: 400px; width: 100%;
-            border-radius: 28px; background-color: var(--glass-bg);
-            -webkit-backdrop-filter: blur(20px); backdrop-filter: blur(20px);
-            border: 1px solid var(--glass-border); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+
+        /* Header Area */
+        header {
+            padding: 40px 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 0.9rem;
+            font-weight: 500;
+            opacity: 0.8;
         }
-        .profile-emoji { font-size: 72px; margin-bottom: 0.5rem; display: block; line-height: 1.2; }
-        h1 { font-size: 1.8rem; font-weight: 700; margin: 0; color: var(--text-primary); }
-        p { margin: 0.5rem 0 2.5rem 0; color: var(--text-secondary); font-size: 1rem; }
-        .links { display: flex; justify-content: center; flex-wrap: wrap; gap: 1rem; }
-        .link-item {
-            display: flex; align-items: center; justify-content: center;
-            border: 1.5px solid var(--icon-border); border-radius: 50%;
-            width: 56px; height: 56px; color: var(--text-primary); transition: all 0.2s ease;
+
+        /* Center Greeting Area */
+        .hero {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;
+            text-align: center;
+            padding-bottom: 50px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
-        .link-item:hover { background-color: var(--hover-bg); transform: translateY(-2px); border-color: var(--text-primary); }
-        .link-item svg { width: 24px; height: 24px; fill: currentColor; }
-        .footer-link { margin-top: 3rem; display: inline-block; color: var(--text-secondary); text-decoration: none; font-family: ui-monospace, monospace; font-size: 0.85rem; }
+
+        .hero h1 {
+            font-size: 2.2rem;
+            font-weight: 600;
+            margin: 0;
+            letter-spacing: -0.02em;
+            /* text-transform: uppercase; removed to allow sentence case */
+        }
+
+        .hero p {
+            font-size: 1.1rem;
+            margin: 12px 0 0 0;
+            color: var(--text-sub);
+            font-weight: 400;
+        }
+
+        /* Bottom 2x2 Dock */
+        .dock {
+            padding: 0 24px 60px 24px;
+            width: 100%;
+            max-width: 440px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 16px;
+        }
+
+        .dock-item {
+            background: var(--glass);
+            -webkit-backdrop-filter: blur(35px);
+            backdrop-filter: blur(35px);
+            border: 1px solid var(--border);
+            border-radius: 28px;
+            height: 115px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            color: inherit;
+            transition: transform 0.2s ease, background 0.3s ease;
+        }
+
+        .dock-item:active {
+            transform: scale(0.94);
+            background: rgba(255, 255, 255, 0.25);
+        }
+
+        .dock-item svg {
+            width: 30px;
+            height: 30px;
+            margin-bottom: 12px;
+            fill: var(--text-main);
+            opacity: 0.95;
+        }
+
+        .dock-item span {
+            font-size: 0.85rem;
+            font-weight: 500;
+            letter-spacing: 0.02em;
+        }
+
+        .fade-in { animation: fadeIn 1.5s ease-out forwards; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(15px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
-<body>
-    <div class="container">
-        <span class="profile-emoji">😁</span>
-        <h1>shagun</h1>
-        <p>hey there! find me on the internet</p>
-        <div class="links">
-            <a href="https://github.com/srivastsh" class="link-item" target="_blank" aria-label="GitHub"><svg viewBox="0 0 16 16"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg></a>
-            <a href="https://x.com/srivastsh" class="link-item" target="_blank" aria-label="X"><svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg></a>
-            <a href="https://linkedin.com/in/srivastsh" class="link-item" target="_blank" aria-label="LinkedIn"><svg viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a>
-            <a href="https://instagram.com/srivastsh" class="link-item" target="_blank" aria-label="Instagram"><svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.148 3.228-1.667 4.771-4.919 4.919-1.266.058-1.644.069-4.85.069s-3.584-.011-4.85-.069c-3.228-.148-4.771-1.667-4.919-4.919C2.175 15.584 2.164 15.204 2.164 12s.011-3.584.069-4.85C2.38 3.922 3.922 2.38 7.15 2.233c1.266-.058 1.645-.069 4.85-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.272 2.695.072 7.053.014 8.333 0 8.741 0 12s.014 3.667.072 4.947c.2 4.358 2.623 6.78 6.981 6.98 1.28.058 1.689.072 4.947.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.623 6.98-6.98.058-1.28.072-1.689.072-4.947s-.014-3.667-.072-4.947c-.2-4.358-2.623-6.78-6.98-6.98C15.667.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"/></svg></a>
-            <a href="mailto:srivastsh@gmail.com" class="link-item" aria-label="Email"><svg viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg></a>
-        </div>
-        <a href="https://shag.lol" class="footer-link">shag.lol</a>
+<body id="dynamic-body">
+
+    <header class="fade-in">
+        <div id="current-date">---</div>
+        <div style="font-weight: 700; letter-spacing: 1px;">SS</div>
+    </header>
+
+    <div class="hero fade-in">
+        <h1 id="time-greet">Loading...</h1>
+        <p id="weather-text">Updating weather in SF...</p>
     </div>
+
+    <div class="dock fade-in">
+        <a href="https://x.com/srivastsh" class="dock-item" target="_blank">
+            <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+            <span>Twitter</span>
+        </a>
+        <a href="https://linkedin.com/in/srivastsh" class="dock-item" target="_blank">
+            <svg viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+            <span>LinkedIn</span>
+        </a>
+        <a href="https://instagram.com/srivastsh" class="dock-item" target="_blank">
+            <svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.148 3.228-1.667 4.771-4.919 4.919-1.266.058-1.644.069-4.85.069s-3.584-.011-4.85-.069c-3.228-.148-4.771-1.667-4.919-4.919C2.175 15.584 2.164 15.204 2.164 12s.011-3.584.069-4.85C2.38 3.922 3.922 2.38 7.15 2.233c1.266-.058 1.645-.069 4.85-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.272 2.695.072 7.053.014 8.333 0 8.741 0 12s.014 3.667.072 4.947c.2 4.358 2.623 6.78 6.981 6.98 1.28.058 1.689.072 4.947.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.623 6.98-6.98.058-1.28.072-1.689.072-4.947s-.014-3.667-.072-4.947c-.2-4.358-2.623-6.78-6.98-6.98C15.667.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"/></svg>
+            <span>Instagram</span>
+        </a>
+        <a href="mailto:srivastsh@gmail.com" class="dock-item">
+            <svg viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+            <span>Email</span>
+        </a>
+    </div>
+
+    <script>
+        async function updateDashboard() {
+            const now = new Date();
+            const hrs = now.getHours();
+            const greet = document.getElementById('time-greet');
+            const body = document.getElementById('dynamic-body');
+            const dateEl = document.getElementById('current-date');
+            const weatherEl = document.getElementById('weather-text');
+
+            // 1. Set Date
+            dateEl.innerText = now.toLocaleDateString('en-US', { weekday: 'short', month: 'short', day: 'numeric' });
+
+            // 2. Set Background & Greeting (Cycle)
+            let bg = "";
+            let message = "";
+
+            if (hrs >= 5 && hrs < 11) {
+                message = "Good Morning";
+                bg = "../morning.jpg";
+            } else if (hrs >= 11 && hrs < 17) {
+                message = "Good Afternoon";
+                bg = "../day.jpg";
+            } else if (hrs >= 17 && hrs < 21) {
+                message = "Good Evening";
+                bg = "../evening.jpg";
+            } else {
+                message = "Good Night";
+                bg = "../night.jpg";
+            }
+
+            greet.innerText = message;
+            body.style.backgroundImage = `url('${bg}')`;
+
+            // 3. Fetch Real-time SF Weather
+            try {
+                const lat = 37.7749; // SF Latitude
+                const lon = -122.4194; // SF Longitude
+                const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true&temperature_unit=fahrenheit`);
+                const data = await res.json();
+                const temp = Math.round(data.current_weather.temperature);
+                const code = data.current_weather.weathercode;
+                
+                let desc = "clear sky";
+                if (code > 0 && code <= 3) desc = "mainly clear";
+                else if (code >= 45 && code <= 48) desc = "foggy";
+                else if (code >= 51 && code <= 67) desc = "rainy";
+                else if (code >= 71) desc = "snowy";
+
+                weatherEl.innerText = `${temp}°F and ${desc} in SF`;
+            } catch (e) {
+                weatherEl.innerText = "58°F and clear sky in SF"; 
+            }
+        }
+
+        updateDashboard();
+    </script>
 </body>
 </html>
