--- a/me/index.html
+++ b/me/index.html
@@ -7,20 +7,19 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😁</text></svg>">
     <style>
         :root {
-            --glass-card: rgba(255, 255, 255, 0.75);
-            --glass-item: rgba(255, 255, 255, 0.4);
+            /* Increased transparency (0.4) and reduced blur */
+            --glass-card: rgba(255, 255, 255, 0.45);
+            --glass-item: rgba(255, 255, 255, 0.2);
             --text-main: #1d1d1f;
-            --text-sub: #6e6e73;
-            --border: rgba(255, 255, 255, 0.5);
+            --text-sub: #424245;
         }
 
         @media (prefers-color-scheme: dark) {
             :root {
-                --glass-card: rgba(20, 20, 25, 0.7);
-                --glass-item: rgba(255, 255, 255, 0.05);
+                --glass-card: rgba(15, 15, 18, 0.4);
+                --glass-item: rgba(255, 255, 255, 0.08);
                 --text-main: #ffffff;
                 --text-sub: #a1a1a6;
-                --border: rgba(255, 255, 255, 0.1);
             }
         }
 
@@ -31,49 +30,54 @@
             height: 100dvh; width: 100vw;
             display: flex; justify-content: center; align-items: center;
             font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
-            background-size: cover; background-position: center;
             overflow: hidden;
-            transition: background-image 1s ease-in-out;
+            background-color: #000;
         }
 
-        /* The Blurry Background Layer */
-        .bg-blur {
+        .bg-layer {
             position: fixed; top: 0; left: 0; right: 0; bottom: 0;
-            background-image: inherit; background-size: cover; background-position: center;
-            filter: blur(60px) brightness(0.9); transform: scale(1.1);
+            background-size: cover; background-position: center;
+            filter: blur(80px) brightness(0.9);
+            transform: scale(1.2);
             z-index: -1;
+            transition: background-image 1.2s ease-in-out;
         }
 
         .main-card {
-            width: 100%; height: 100%; /* Fullscreen Mobile */
-            max-width: 400px; max-height: 800px; /* Desktop Containment */
+            width: 100%; height: 100%;
+            max-width: 420px; max-height: 850px;
             background: var(--glass-card);
-            -webkit-backdrop-filter: blur(20px); backdrop-filter: blur(20px);
-            border: 1px solid var(--border);
-            display: flex; flex-direction: column; padding: 24px; gap: 20px;
+            -webkit-backdrop-filter: blur(15px); /* Mildly less blur */
+            backdrop-filter: blur(15px);
+            display: flex; flex-direction: column; 
+            padding: 30px; gap: 24px;
             animation: fadeUp 0.8s ease-out;
         }
 
         @media (min-width: 600px) {
-            .main-card { height: auto; border-radius: 44px; box-shadow: 0 40px 100px rgba(0,0,0,0.2); }
+            .main-card { 
+                height: auto; 
+                border-radius: 52px; 
+                border: 1px solid rgba(255,255,255,0.2); 
+                box-shadow: 0 40px 100px rgba(0,0,0,0.15); 
+            }
         }
 
         .card-header {
             display: flex; justify-content: space-between; align-items: center;
-            font-size: 0.85rem; font-weight: 600; opacity: 0.8;
+            font-size: 0.9rem; font-weight: 600; opacity: 0.8;
         }
 
-        /* The Crisp "Normal" Image in Card */
         .hero-img {
-            width: 100%; height: 220px;
+            width: 100%; height: 260px;
             background-size: cover; background-position: center;
-            border-radius: 28px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            transition: background-image 1s ease-in-out;
+            border-radius: 36px;
+            transition: background-image 1.2s ease-in-out;
         }
 
-        .card-greeting { text-align: center; margin: 10px 0; }
-        .card-greeting h1 { font-size: 1.8rem; font-weight: 700; margin: 0; letter-spacing: -0.02em; }
-        .card-greeting p { font-size: 1rem; margin: 6px 0 0 0; color: var(--text-sub); }
+        .card-greeting { text-align: center; margin-top: 10px; }
+        .card-greeting h1 { font-size: 1.8rem; font-weight: 700; margin: 0; letter-spacing: -0.03em; }
+        .card-greeting p { font-size: 0.95rem; margin: 8px 0 0 0; color: var(--text-sub); font-weight: 450; }
 
         .dock {
             display: grid; grid-template-columns: repeat(2, 1fr); gap: 16px;
@@ -82,29 +86,29 @@
 
         .dock-item {
             background: var(--glass-item);
-            border: 1px solid var(--border); border-radius: 28px;
+            border-radius: 32px; /* Removed borders */
             aspect-ratio: 1 / 1;
             display: flex; align-items: center; justify-content: center;
             text-decoration: none; color: inherit;
             transition: all 0.2s ease;
         }
 
-        .dock-item:active { transform: scale(0.92); background: rgba(255, 255, 255, 0.2); }
+        .dock-item:active { transform: scale(0.92); background: rgba(255, 255, 255, 0.1); }
         .dock-item svg { width: 34px; height: 34px; fill: var(--text-main); }
 
-        .pulse { animation: pulse 3s infinite ease-in-out; }
-        @keyframes pulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }
+        .pulse { animation: pulse 4s infinite ease-in-out; }
+        @keyframes pulse { 0%, 100% { transform: scale(1); opacity: 1; } 50% { transform: scale(1.05); opacity: 0.8; } }
         @keyframes fadeUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body id="dynamic-body">
 
-    <div class="bg-blur"></div>
+    <div class="bg-layer" id="bg-blur"></div>
 
     <div class="main-card">
         <div class="card-header">
             <div id="current-date">---</div>
-            <div style="font-weight: 700; letter-spacing: 1px; color: var(--text-main);">SS</div>
+            <div style="font-weight: 800; letter-spacing: 0.5px; color: var(--text-main);">SS</div>
         </div>
 
         <div class="hero-img" id="inner-hero"></div>
@@ -115,16 +119,16 @@
         </div>
 
         <div class="dock">
-            <a href="https://instagram.com/srivastsh" class="dock-item" target="_blank" aria-label="Instagram">
+            <a href="https://instagram.com/srivastsh" class="dock-item" target="_blank">
                 <svg class="pulse" style="animation-delay: 0s;" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.148 3.228-1.667 4.771-4.919 4.919-1.266.058-1.644.069-4.85.069s-3.584-.011-4.85-.069c-3.228-.148-4.771-1.667-4.919-4.919C2.175 15.584 2.164 15.204 2.164 12s.011-3.584.069-4.85C2.38 3.922 3.922 2.38 7.15 2.233c1.266-.058 1.645-.069 4.85-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.272 2.695.072 7.053.014 8.333 0 8.741 0 12s.014 3.667.072 4.947c.2 4.358 2.623 6.78 6.981 6.98 1.28.058 1.689.072 4.947.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.623 6.98-6.98.058-1.28.072-1.689.072-4.947s-.014-3.667-.072-4.947c-.2-4.358-2.623-6.78-6.98-6.98C15.667.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"/></svg>
             </a>
-            <a href="https://x.com/srivastsh" class="dock-item" target="_blank" aria-label="X">
+            <a href="https://x.com/srivastsh" class="dock-item" target="_blank">
                 <svg class="pulse" style="animation-delay: 0.2s;" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
             </a>
-            <a href="https://linkedin.com/in/srivastsh" class="dock-item" target="_blank" aria-label="LinkedIn">
+            <a href="https://linkedin.com/in/srivastsh" class="dock-item" target="_blank">
                 <svg class="pulse" style="animation-delay: 0.4s;" viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
             </a>
-            <a href="mailto:srivastsh@gmail.com" class="dock-item" aria-label="Email">
+            <a href="mailto:srivastsh@gmail.com" class="dock-item">
                 <svg class="pulse" style="animation-delay: 0.6s;" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
             </a>
         </div>
@@ -135,7 +139,7 @@
             const now = new Date();
             const hrs = now.getHours();
             const greet = document.getElementById('time-greet');
-            const body = document.getElementById('dynamic-body');
+            const bgBlur = document.getElementById('bg-blur');
             const innerHero = document.getElementById('inner-hero');
             const dateEl = document.getElementById('current-date');
             const weatherEl = document.getElementById('weather-text');
@@ -150,7 +154,7 @@
 
             greet.innerText = message;
             const url = `url('${bg}')`;
-            body.style.backgroundImage = url;
+            bgBlur.style.backgroundImage = url;
             innerHero.style.backgroundImage = url;
 
             try {
