--- a/me/index.html
+++ b/me/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😁</text></svg>">
     <style>
         :root {
-            /* Increased transparency (0.4) and reduced blur */
-            --glass-card: rgba(255, 255, 255, 0.45);
+            /* High transparency variables matching image_a13d96.png */
+            --glass-card: rgba(255, 255, 255, 0.4);
             --glass-item: rgba(255, 255, 255, 0.2);
             --text-main: #1d1d1f;
             --text-sub: #424245;
@@ -16,7 +16,7 @@
 
         @media (prefers-color-scheme: dark) {
             :root {
-                --glass-card: rgba(15, 15, 18, 0.4);
+                --glass-card: rgba(15, 15, 20, 0.4);
                 --glass-item: rgba(255, 255, 255, 0.08);
                 --text-main: #ffffff;
                 --text-sub: #a1a1a6;
@@ -34,51 +34,58 @@
             background-color: #000;
         }
 
+        /* Deep Background Blur Layer */
         .bg-layer {
             position: fixed; top: 0; left: 0; right: 0; bottom: 0;
             background-size: cover; background-position: center;
-            filter: blur(80px) brightness(0.9);
-            transform: scale(1.2);
+            filter: blur(100px) brightness(0.9);
+            transform: scale(1.3);
             z-index: -1;
             transition: background-image 1.2s ease-in-out;
         }
 
+        /* Main Dashboard Card */
         .main-card {
             width: 100%; height: 100%;
-            max-width: 420px; max-height: 850px;
+            max-width: 440px; max-height: 850px;
             background: var(--glass-card);
-            -webkit-backdrop-filter: blur(15px); /* Mildly less blur */
-            backdrop-filter: blur(15px);
+            -webkit-backdrop-filter: blur(15px) saturate(160%); 
+            backdrop-filter: blur(15px) saturate(160%);
             display: flex; flex-direction: column; 
-            padding: 30px; gap: 24px;
-            animation: fadeUp 0.8s ease-out;
+            padding: 35px; gap: 20px;
+            animation: fadeUp 1s cubic-bezier(0.2, 0.8, 0.2, 1);
         }
 
         @media (min-width: 600px) {
             .main-card { 
-                height: auto; 
-                border-radius: 52px; 
-                border: 1px solid rgba(255,255,255,0.2); 
-                box-shadow: 0 40px 100px rgba(0,0,0,0.15); 
+                height: auto; border-radius: 56px; 
+                border: 1px solid rgba(255,255,255,0.15);
+                box-shadow: 0 50px 100px rgba(0,0,0,0.1);
             }
         }
 
+        /* Header matching image_ab9876.png */
         .card-header {
             display: flex; justify-content: space-between; align-items: center;
-            font-size: 0.9rem; font-weight: 600; opacity: 0.8;
+            font-size: 0.9rem; font-weight: 500; opacity: 0.8;
         }
+        .palm-icon svg { width: 24px; height: 24px; fill: var(--text-main); }
+        .initials { font-weight: 800; letter-spacing: 0.5px; }
 
+        /* Crisp Hero Section */
         .hero-img {
-            width: 100%; height: 260px;
+            width: 100%; height: 280px;
             background-size: cover; background-position: center;
-            border-radius: 36px;
+            border-radius: 40px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.08);
             transition: background-image 1.2s ease-in-out;
         }
 
         .card-greeting { text-align: center; margin-top: 10px; }
-        .card-greeting h1 { font-size: 1.8rem; font-weight: 700; margin: 0; letter-spacing: -0.03em; }
-        .card-greeting p { font-size: 0.95rem; margin: 8px 0 0 0; color: var(--text-sub); font-weight: 450; }
+        .card-greeting h1 { font-size: 1.85rem; font-weight: 600; margin: 0; letter-spacing: -0.03em; }
+        .card-greeting p { font-size: 1rem; margin: 8px 0 0 0; color: var(--text-sub); }
 
+        /* Floating borderless grid */
         .dock {
             display: grid; grid-template-columns: repeat(2, 1fr); gap: 16px;
             margin-top: auto; padding-bottom: 20px;
@@ -86,19 +93,19 @@
 
         .dock-item {
             background: var(--glass-item);
-            border-radius: 32px; /* Removed borders */
+            border-radius: 36px;
             aspect-ratio: 1 / 1;
             display: flex; align-items: center; justify-content: center;
             text-decoration: none; color: inherit;
-            transition: all 0.2s ease;
+            transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
-        .dock-item:active { transform: scale(0.92); background: rgba(255, 255, 255, 0.1); }
-        .dock-item svg { width: 34px; height: 34px; fill: var(--text-main); }
+        .dock-item:active { transform: scale(0.9); background: rgba(255, 255, 255, 0.15); }
+        .dock-item svg { width: 38px; height: 38px; fill: var(--text-main); }
 
         .pulse { animation: pulse 4s infinite ease-in-out; }
-        @keyframes pulse { 0%, 100% { transform: scale(1); opacity: 1; } 50% { transform: scale(1.05); opacity: 0.8; } }
-        @keyframes fadeUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes pulse { 0%, 100% { transform: scale(1); opacity: 1; } 50% { transform: scale(1.06); opacity: 0.8; } }
+        @keyframes fadeUp { from { opacity: 0; transform: translateY(40px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body id="dynamic-body">
@@ -107,8 +114,11 @@
 
     <div class="main-card">
         <div class="card-header">
+            <div class="palm-icon">
+                <svg viewBox="0 0 24 24"><path d="M12 2c-5.33 4-8 7.67-8 11 0 3.31 2.69 6 6 6v3h4v-3c3.31 0 6-2.69 6-6 0-3.33-2.67-7-8-11zm-2.5 8c.83 0 1.5.67 1.5 1.5S10.33 13 9.5 13s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5zM12 17c-1.66 0-3-1.34-3-3 0-.55.45-1 1-1s1 .45 1 1c0 .55.45 1 1 1s1-.45 1-1c0-.55.45-1 1-1s1 .45 1 1c0 1.66-1.34 3-3 3zm2.5-5.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"/></svg>
+            </div>
             <div id="current-date">---</div>
-            <div style="font-weight: 800; letter-spacing: 0.5px; color: var(--text-main);">SS</div>
+            <div class="initials">SS</div>
         </div>
 
         <div class="hero-img" id="inner-hero"></div>
